Make PO (closes #3537)

--- a/CKEDITOR_PLUGINS_fr.po
+++ b/CKEDITOR_PLUGINS_fr.po
@@ -3,16 +3,29 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TEMPLATE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-01-13 11:40+0100\n"
+"POT-Creation-Date: 2013-01-30 18:43+0100\n"
 "PO-Revision-Date: 2010-01-12 15:35+0100\n"
 "Last-Translator: Jean Martin <jean.martin@somewhere.org>\n"
 "Language-Team: French <distrib@somewhere.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-msgid "Template name"
-msgstr ""
+msgid "CKEDITOR_PLUGINS:Access to basic action for CKEDITOR plugin"
+msgstr "ACL d'accès aux action de CKEDITOR Plugin"
 
-msgid "Template description"
-msgstr ""
+msgid "CKEDITOR_PLUGINS:Action to select a doc"
+msgstr "Sélection d'un document (doclink)"
+
+msgid "CKEDITOR_PLUGINS:Link to doc"
+msgstr "Lien vers un document"
+
+msgid "CKEDITOR_PLUGINS:Select a document"
+msgstr "Veuillez sélectionner un document"
+
+msgid "CKEDITOR_PLUGINS:dynacase-ckeditor-plugins description"
+msgstr "Collection de plugin CKEDITOR pour enrichir le HTMLTEXT"
+
+msgid "CKEDITOR_PLUGINS:dynacase-ckeditor-plugins name"
+msgstr "Plugin CKEDITOR"
