--- a/CKEDITOR_PLUGINS_en.po
+++ b/CKEDITOR_PLUGINS_en.po
@@ -2,16 +2,29 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ZOO\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-01-13 11:40+0100\n"
+"POT-Creation-Date: 2013-01-30 18:43+0100\n"
 "PO-Revision-Date: 2010-01-12 15:35+0100\n"
 "Last-Translator: John Doe <john.doe@somewhere.org>\n"
 "Language-Team: English <distrib@somewhere.org>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-msgid "Template name"
-msgstr ""
+msgid "CKEDITOR_PLUGINS:Access to basic action for CKEDITOR plugin"
+msgstr "Access to basic action for CKEDITOR plugin"
 
-msgid "Template description"
-msgstr ""
+msgid "CKEDITOR_PLUGINS:Action to select a doc"
+msgstr "Action to select a doc"
+
+msgid "CKEDITOR_PLUGINS:Link to doc"
+msgstr "Link to doc"
+
+msgid "CKEDITOR_PLUGINS:Select a document"
+msgstr "Select a document"
+
+msgid "CKEDITOR_PLUGINS:dynacase-ckeditor-plugins description"
+msgstr "Plugins for CKEDITOR"
+
+msgid "CKEDITOR_PLUGINS:dynacase-ckeditor-plugins name"
+msgstr "Plugins for CKEDITOR"
